--- a/config/database.yml
+++ b/config/database.yml
@@ -24,6 +24,8 @@ default: &default
 development:
   <<: *default
   database: project276_development
+  username: postgres
+  password: root
 
 
   # The specified database role being used to connect to postgres.
@@ -59,6 +61,8 @@ development:
 test:
   <<: *default
   database: project276_test
+  username: postgres
+  password: root
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
